<resources>
    <string name="app_name">My CCA</string>
    <string name="gaming_dronzz">Gaming Dronzz</string>
    <string name="home">Home</string>
    <string name="pension_grievance">Pension Grievance</string>
    <string name="gpf_grievance">GPF Grievance</string>
    <string name="view_saved_grievance">Saved Grievances</string>
    <string name="upload_aadhaar">Upload AADHAAR</string>
    <string name="upload_pan">Upload PAN</string>
    <string name="upload_life_certificate">Upload Life Certificate</string>
    <string name="upload_re_marriage_certificate">Upload Re-Marriage Certificate</string>
    <string name="upload_re_employment_certificate">Upload Re-Employment Certificate</string>
    <string name="kyp">KYP</string>
    <string name="track_grievances">Track Grievances</string>
    <string name="contact_us">Contact Us</string>
    <string name="latest_news">Latest News</string>
    <string name="wifi">Wifi Hotspot Locations</string>
    <string name="gp">Gram Panchayat Locations</string>
    <string name="inspection">Inspection</string>
    <string name="saved_inspections">Saved Inspections</string>
    <string name="update_grievances">Update Grievances</string>
    <string name="add_news">Add News</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="visit_cca_jk_website">Visit Website</string>
    <string name="functions">Functions</string>
    <string name="update_information">Update Information</string>
    <string name="tracking">Tracking</string>
    <string name="others">Others</string>
    <string name="wifi_hotspot_locator">WIFI Hotspot Locator</string>
    <string name="gp_lit_locator">GP LIT Locator</string>
    <string name="staff_corner">Staff Corner</string>
    <string name="log_out">Log Out</string>
    <string name="invite">Invite</string>
    <string name="about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear_all">Clear Form Data</string>
    <string name="clear">Clear All</string>
    <string name="add_image">Add Image</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_image">Remove Image</string>
    <string name="scan_adhaar">Scan Aadhaar Card</string>
    <string name="no_image">NO IMAGE SELECTED</string>
    <string name="files_selected">%1$s Files Selected</string>
    <string name="circle">Circle</string>
    <string name="g_type">Grievance Type</string>
    <string name="submitted_by">Grievance Submitted By</string>
    <string name="g_details">Grievance Details</string>
    <string name="upload_using">Upload Using</string>
    <string name="p_code">Pensioner Code</string>
    <string name="hr_num">HR Number</string>
    <string name="staff_num">Staff Number</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="email">E-Mail</string>
    <string name="applicant_name">Applicant\'s Name</string>
    <string name="aadhaar_no">Aadhaar Number</string>
    <string name="pan_no">PAN Number</string>
    <string name="grievances_registered_using">Grievances Registered Using</string>
    <string name="location">Location Coordinates</string>
    <string name="location_hint">Enter Location Name</string>
    <string name="pensioner_hr_staff_code">Pensioner/HR/Staff Code</string>
    <string name="grievance">Grievance</string>
    <string name="grievance_application_date">Grievance Application Date</string>
    <string name="reference_number">Reference Number</string>
    <string name="update_status">Update Status:</string>
    <string name="message">Message:</string>
    <string name="headline">Headline</string>
    <string name="details">Details</string>
    <string name="login">Log In</string>
    <string name="change">CHANGE</string>
    <string name="update">UPDATE</string>
    <string name="track">TRACK</string>
    <string name="submit">SUBMIT</string>
    <string name="submit_now">SUBMIT NOW</string>
    <string name="save">SAVE FOR LATER</string>
    <string name="tutorial_title0">Welcome</string>
    <string name="tutorial_title1">@string/functions</string>
    <string name="tutorial_title2">@string/tracking</string>
    <string name="tutorial_title3">Add Other Information</string>
    <string name="tutorial_title4">Google Sign In</string>
    <string name="tutorial_text0">Welcome to Official Android Application of\nController of Communication Accounts</string>
    <string name="tutorial_text1">CCA pensioners can register their grievances using the Pension or GPF Grievance option from the Main menu</string>
    <string name="tutorial_text2">Pensioners can also check the <b>Status</b> of their grievances using Track Grievance option from the Main menu</string>
    <string name="tutorial_text3">Pensioners can <b>link</b> other information like <b>aadhaar pan etc</b>. through Update Information section in the main menu</string>
    <string name="tutorial_text4">App features require google sign in. You can manually sign in and sign out using Settings option in Secondary menu</string>
    <string name="submitted">Submitted</string>
    <string name="under_process">Under Process</string>
    <string name="resolved">Resolved</string>
    <string name="change_of_pda">Change of PDA</string>
    <string name="correction_in_ppo">Correction in PPO</string>
    <string name="wrong_fixation">Wrong Fixation of Pension</string>
    <string name="non_updation_da">Non Updation of DA</string>
    <string name="non_payment_monthly">Non Payment of Monthly Pension</string>
    <string name="non_payment_medical">Non Payment of Medical Allowance</string>
    <string name="non_starting_pension">Non Starting of Family Pension</string>
    <string name="non_revision">Non Revision as per Latest CPC</string>
    <string name="request_cgies">Request for CGIES</string>
    <string name="excess_short_payment">Excess/Short Payment</string>
    <string name="enhancement_on_75_80">Enhancement of Pension on Attaining 75/80</string>
    <string name="other_pension_gr">Other Pension Grievance</string>
    <string name="gpf_final_not_received">GPF Final Payment not received</string>
    <string name="correction_name">Correction in the Name</string>
    <string name="change_nomination">Change of Nomination</string>
    <string name="gpf_acc_not_transferred">GPF Account not transferred</string>
    <string name="details_of_gpf_deposit">Details of GPF Deposit A/C Slip</string>
    <string name="non_payment_gpf_withdrawal">Non Payment of GPF Withdrawal</string>
    <string name="other_gpf_gr">Other GPF Grievance</string>
    <string name="splash_text">Office of CCA, J&amp;K Circle\nJAMMU\nDepartment of Telecommunications</string>
    <string name="version">Version %1$s</string>
    <string name="hello">Hello </string>
    <string name="latest_from_cca">Latest From CCA</string>
    <string name="visit_us">Visit Us</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="input_username">Please input Username</string>
    <string name="input_password">Please input Password</string>
    <string name="no_user_found">No user found</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="pension">Pension</string>
    <string name="gpf">GPF</string>
    <string name="invalid_p_code">Enter Valid Pensioner Code</string>
    <string name="invalid_hr_num">Enter Valid HR Number</string>
    <string name="invalid_staff_num">Enter Valid Staff Number</string>
    <string name="invalid_mobile">Enter Valid Mobile No</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="empty_detail">Add details</string>
    <string name="pensioner">Pensioner</string>
    <string name="gpf_benificiary">GPF Benificiary</string>
    <string name="other">Other</string>
    <string name="grievance_submission_success">%1$s Grievance for\n %2$s \nwith Reference Number\n %3$s \nhas been successfully submitted</string>
    <string name="grievance_submission_fail">Grievance Submission Failed\nTry Again</string>
    <string name="number">%1$s Number</string>
    <string name="invalid_aadhaar">Invalid Aadhaar Number</string>
    <string name="invalid_pan">Invalid Pan Number</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="updation_success">Update request for %1$s has been submitted successfully</string>
    <string name="updation_failed">Request for Updloading Information Failed\nTry Again</string>
    <string name="download_kyp_form">Download KYP Form</string>
    <string name="submit_kyp_form">Submit KYP Form</string>
    <string name="kyp_upload_success">Your KYP Form is successfully uploaded</string>
    <string name="kyp_upload_fail">KYP form could not be uploaded</string>
    <string name="add_kyp_image">Please attach the image of your duly filled KYP form</string>
    <string name="office_address">Office Address</string>
    <string name="locate_on_map">Locate on Map</string>
    <string name="contact_persons">Contact Persons</string>
    <string name="contact_na">Contact details of this person not available </string>
    <string name="email_na">Email not available</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="search_locations">Search Locations</string>
    <string name="select_circle">Select Circle</string>
    <string name="select_district">Select District</string>
    <string name="sort_locations">Sort locations by</string>
    <string name="name">Name</string>
    <string name="district">District</string>
    <string name="msg_no_location">This feature requires Location.\nTurn On Location and Refresh</string>
    <string name="within_36_km">WITHIN 36 KM</string>
    <string name="within">WITHIN %1$s KM</string>
    <string name="all_locations">ALL LOCATIONS</string>
    <string name="nearby">NEARBY</string>
    <string name="no_locations_found">No Locations found</string>
    <string name="increase_radius">No Locations nearby\nIncrease Radius</string>
    <string name="current_pos">Current Position</string>
    <string name="enable_location">Please Enable Location and Internet</string>
    <string name="you_are_here">You are here</string>
    <string name="turning_on_location">Turning Location On\nPlease wait…</string>
    <string name="loc_off">LOCATION OFF! \nUnable to get nearby locations without location access.</string>
    <string name="location_denied">Location Permission denied! \nHotspot Locator will not work without location access.\n\nPlease grant location access</string>
    <string name="about_us_string">This application is  developed and maintained by GAMING DRONZZ, Jammu.</string>
    <string name="about_developer">About Developer</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">This is the official android application of Controller Communication Accounts, Jammu and Kashmir.
Information for this app is provided by Controller Communication Accounts, Jammu and Kashmir.
While every care has been taken to provide correct and updated information, Gaming Dronzz is not responsible for any error/ omission or delay in updating data/information and so on.
The users of the app are therefore requested to contact CCA J&amp;K.</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="proceed">PROCEED</string>
    <string name="close">CLOSE</string>
    <string name="no_circles">Internet connection not available. Some data could not be downloaded.\nPlease turn on internet and restart app to continue using application.</string>
</resources>