<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StateSelectionActivity">

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:padding="@dimen/padding_large"
        android:text="@string/select_circle"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:textSize="@dimen/text_20"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_state"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/bg_spinner" />

    <TextView
        android:id="@+id/tv_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:padding="@dimen/padding_large"
        android:text="@string/choose_language"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_20"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_lang"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_large"
        tools:ignore="RtlSymmetry">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="@dimen/padding_large"
            android:text="@string/english"
            android:textSize="@dimen/text_18" />

        <RadioButton
            android:id="@+id/radioHindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large"
            android:text="@string/hindi"
            android:textSize="@dimen/text_18" />

    </RadioGroup>

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/proceed"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/colorGray"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/no_circles"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_25"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:text="@string/close"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_18"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>