<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dd000000"
    android:descendantFocusability="beforeDescendants"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_layout_background_primary"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_large"
            android:padding="@dimen/padding_large"
            android:text="@string/track_grievances"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_20"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorOffWhite"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/circle"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_20" />

            <Spinner
                android:id="@+id/spinner_track_circle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/bg_spinner"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorOffWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:paddingStart="@dimen/padding_large"
                android:paddingTop="@dimen/padding_medium"
                android:text="@string/grievances_registered_using"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_15"
                tools:ignore="RtlSymmetry" />

            <RadioGroup
                android:id="@+id/radio_group_identifier_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">

                <RadioButton
                    android:id="@+id/radioButtonPensioner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/p_code"
                    android:textColor="@color/colorBlack" />

                <RadioButton
                    android:id="@+id/radioButtonHR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hr_num"
                    android:textColor="@color/colorBlack" />

                <RadioButton
                    android:id="@+id/radioButtonStaff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/staff_num"
                    android:textColor="@color/colorBlack" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_pcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/p_code"
                    android:inputType="number"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_20"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_check_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/custom_button"
                android:text="@string/track"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_20" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
